# high_performance_modular_training

./: .pre-commit-config.yaml  .taplo.toml  .yamllint  LICENSE  README.md  pyproject.toml
.github/workflows/: code-quality.yaml  tests.yaml
hpmt/: main.py
hpmt/models/activations/: README.md  __init__.py  gelu.py  layernorm.py
hpmt/models/modules/: ffn.py  layernorm.py  linear.py
hpmt/tests/test_models/test_activations/: test_gelu.py  test_layernorm.py
hpmt/tests/test_models/test_modules/: test_ffn.py  test_layernorm.py  test_linear.py
